[tool.poetry]
name = "spotify-wordcloud"
version = "0.1.0"
description = ""
authors = ["HelloRusk <hellorusk1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
blinker = "1.4"
Flask = "2.0.3"
Flask-SQLAlchemy = "2.5.1"
flask-talisman = "0.7.0"
Flask-WTF = "1.0.1"
google-cloud-storage = "1.35.0"
gunicorn = "20.0.4"
psycopg2-binary = "2.8.6"
python-dotenv = "0.15.0"
wordcloud = "1.8.1"
black = "22.3.0"
flake8 = "3.8.4"
pytest = "6.2.1"
google-cloud-logging = "3.1.2"
Werkzeug = "2.2.3"
Flask-Dance = "^6.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
